# OSAC-Forum

./: .gitignore  Contributing.md  Pipfile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
accounts/: urls.py  views.py
forum/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_post_votes_post_downvotes_post_upvotes_and_more.py  0003_alter_comment_user_alter_post_user.py  0004_remove_comment_votes.py  0005_comment_votes.py  0006_comment_pseudo_id.py  0007_remove_comment_pseudo_id.py  0008_remove_comment_votes_comment_downvotes_and_more.py
main/templatetags/: custom_tags.py
notification/: admin.py  models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_viewed.py  0003_remove_notification_is_read.py  0004_notification_post.py
static/: comment.js  voting.js
templates/: base.html  comment.html  home.html  notification.html  post_create.html  post_detail.html
templates/registration/: login.html
