[tool.poetry]
name = "osac-forum"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.2"
"backports.zoneinfo" = "0.2.1"
Brotli = "1.0.9"
Django = "4.1.3"
sqlparse = "0.4.3"
tzdata = "2022.5"
whitenoise = {version = "6.2.0", extras = ["brotli"]}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
