[tool.poetry]
name = "osac-forum"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
Django = "3.2.16"
asgiref = "^3.5.2"
"backports.zoneinfo" = "^0.2.1"
Brotli = "^1.0.9"
sqlparse = "^0.4.3"
tzdata = "^2022.6"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
